added html.png to index.html, added some attributes to http response header in Application.java

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -159,6 +159,7 @@ attachments.path=data/attachments
 
 # Custom mime types
 # mimetype.xpi=application/x-xpinstall
+mimetype.xsl=application/xml
 
 # WS configuration
 # ~~~~~
